# org-roam-second-brain

./: README.md  SETUP.md  deploy.sh  org-agenda-project-tracking.el  org-roam-api.el  org-roam-mcp-http.el  org-roam-second-brain.el  org-roam-vector-search.el
mcp/: BUGFIX-JSON-PARSING.md  CLAUDE.md  DEPLOYMENT-NOTES-0.1.6.md  DISTRIBUTION.md  Element-Matrix AI Chatbot (org-roam version).json  Makefile  README.md  deploy.sh  mcp_tools.md  pyproject.toml
mcp/src/org_roam_mcp/: __init__.py  emacs_client.py  server.py
mcp/src/org_roam_mcp/tools/: __init__.py
mcp/tests/: __init__.py  test_emacs_client.py
